Form successfully creates a submission in database

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,5 +22,8 @@
     "react-interactions": "^0.0.8",
     "react-router-dom": "^6.16.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@hookform/devtools": "^4.3.1"
   }
 }
