--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.2.7",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^7.5.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
